# UAP-Pembelajaran-Mesin

./: README.md  pyproject.toml  requirements.txt
src/: app.py
src/pages/: classification.py  home.py
