[project]
name = "UAP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Uswatun", email = "uswatunnnk2101@gmailcom"},
]
dependencies = ["streamlit>=1.41.1", "tensorflow>=2.18.0", "joblib>=1.4.2", "Scikit-learn>=1.6.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "streamlit run ./src/app.py"